# brepax

./: .editorconfig  .gitattributes  .gitignore  .lefthook.yml  .mise.toml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  release-please-config.json  ruff.toml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yaml  docs.yaml  publish-test.yaml  publish.yaml  release-please.yaml
architecture/: index.html
architecture/3d-extension-roadmap/: index.html
architecture/phase1-roadmap/: index.html
docs/: index.md
docs/architecture/: 3d-extension-roadmap.md  index.md
docs/explanation/: 3d_extension_evaluation.md  contact_dynamics_analogy.md  csg_reconstruction_feasibility.md  design_thesis.md  gate_evaluation_report.md  hybrid_optimization_strategy.md  jax_where_gradient_pitfall.md  license_strategy.md  nist_evaluation.md  pseudo_sdf_problem.md  stage_c_feasibility.md  stratification_theory.md  toi_derivation.md  why_brep.md
docs/how-to/: batch_with_vmap.md  compose_primitives.md  custom_loss.md  interop_pythonocc.md
docs/reference/: analytical.md  applications.md  boolean.md  index.md  primitives.md
docs/tutorials/: 01_quickstart.md  02_first_optimization.md  03_stratum_tracking.md
examples/: 01_hello_world.ipynb  01_hello_world.py  02_disk_union_2d.ipynb  02_disk_union_2d.py  03_3d_primitives.ipynb  03_3d_primitives.py  04_boolean_operations.ipynb  04_boolean_operations.py  05_stratum_tracking.ipynb  05_stratum_tracking.py  06_drilling_demo.ipynb  06_drilling_demo.py  07_mold_direction_demo.ipynb  07_mold_direction_demo.py  08_step_io_demo.py  09_step_to_primitives.py  10_step_to_optimization.py  11_step_to_dfm_metrics.py
explanation/3d_extension_evaluation/: index.html
explanation/concept_proof_evaluation/: index.html
explanation/contact_dynamics_analogy/: index.html
explanation/csg_reconstruction_feasibility/: index.html
explanation/design_thesis/: index.html
explanation/gate_evaluation_report/: index.html
explanation/hybrid_optimization_strategy/: index.html
explanation/jax_where_gradient_pitfall/: index.html
explanation/license_strategy/: index.html
explanation/nist_evaluation/: index.html
explanation/nurbs_brep_feasibility/: index.html
explanation/phase1_gate_report/: index.html
explanation/pseudo_sdf_problem/: index.html
explanation/stage_c_feasibility/: index.html
explanation/stratification_theory/: index.html
explanation/toi_derivation/: index.html
explanation/why_brep/: index.html
how-to/batch_with_vmap/: index.html
how-to/compose_primitives/: index.html
how-to/custom_loss/: index.html
how-to/interop_pythonocc/: index.html
reference/: index.html
reference/analytical/: index.html
reference/boolean/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py
(+209 files in other folders)
